logo and logout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.14.4
   shared_preferences: ^2.5.4
+  flutter_svg: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +58,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/acme_dark.svg"
 
 # The following section is specific to Flutter packages.
 flutter:
